# echoes_interact

./: CMakeLists.txt  README.md  main.cpp  условие.txt
host/: host.cpp
include/: constants.h  message_creator.cpp  message_creator.h
proto/: data.proto  messages.proto
receiver/: device_parser_linux.h  launcher.cpp  launcher.h  main.cpp  main_loop.cpp  main_loop.h  message_processer.cpp  message_processer.h  message_processor.cpp  message_processor.h  permission_checker.h  server.cpp  server.h
test/: cmd_args.cpp  msg_process.cpp
